--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,13 +3,13 @@ plugins {
 }
 
 android {
-    compileSdkVersion 30
-    buildToolsVersion "30.0.3"
+    namespace 'com.mimik.randomnumbergen'
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.mimik.randomnumbergen"
         minSdkVersion 26
-        targetSdkVersion 30
+        targetSdkVersion 33
         versionCode 1
         versionName "1.0"
 
@@ -18,7 +18,7 @@ android {
         manifestPlaceholders = [
                 'appAuthRedirectScheme': ''
         ]
-        buildConfigField "String", "AUTHORIZATION_ENDPOINT", '"https://mid.mimik360.com/"'
+        buildConfigField "String", "AUTHORIZATION_ENDPOINT", '"https://devconsole-mid.mimik.com"'
         buildConfigField "String", "CLIENT_ID", '"<YOUR_CLIENT_ID>"'
         buildConfigField "String", "DEVELOPER_ID_TOKEN", '"<YOUR_DEVELOPER_ID_TOKEN>"'
     }
@@ -30,20 +30,23 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
+    }
+    buildFeatures {
+        buildConfig true
     }
 }
 
 dependencies {
-    implementation 'androidx.appcompat:appcompat:1.3.1'
-    implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'com.google.android.material:material:1.9.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
-    implementation 'com.mimik.edgesdk-android-client:edgemobileclient-core:0.0.22'
-    implementation "com.squareup.okhttp3:okhttp:4.9.0"
+    implementation 'com.mimik.edgesdk-android-client:edgemobileclient-core:0.3.8.3'
+    implementation "com.squareup.okhttp3:okhttp:4.9.3"
 }
