--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,19 @@
+pluginManagement {
+    repositories {
+        google()
+        mavenCentral()
+        gradlePluginPortal()
+    }
+}
+dependencyResolutionManagement {
+    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+    repositories {
+        google()
+        mavenCentral()
+        maven {
+            url "https://s3-us-west-2.amazonaws.com/mimik-android-repo"
+        }
+    }
+}
 rootProject.name = "mimik Random Number Generator"
 include ':app'
