--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,9 +15,7 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
-        manifestPlaceholders = [
-                'appAuthRedirectScheme': ''
-        ]
+        manifestPlaceholders = ['appAuthRedirectScheme': '']
         buildConfigField "String", "AUTHORIZATION_ENDPOINT", '"https://devconsole-mid.mimik.com"'
         buildConfigField "String", "CLIENT_ID", '"<YOUR_CLIENT_ID>"'
         buildConfigField "String", "DEVELOPER_ID_TOKEN", '"<YOUR_DEVELOPER_ID_TOKEN>"'
