--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
-    implementation 'com.mimik.edgesdk-android-client:edgemobileclient-core:0.3.8.3'
+    implementation 'com.mimik.edgesdk-android-client:edgemobileclient-core-trial:0.3.8.4'
     implementation "com.squareup.okhttp3:okhttp:4.9.3"
 }
