--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,4 +46,8 @@ dependencies {
 
     implementation 'com.mimik.edgesdk-android-client:edgemobileclient-core-developer:0.3.10.0'
     implementation "com.squareup.okhttp3:okhttp:4.12.0"
+
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.11.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 }
