--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,20 +4,20 @@ plugins {
 
 android {
     namespace 'com.mimik.randomnumbergen'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.mimik.randomnumbergen"
         minSdkVersion 26
-        targetSdkVersion 33
+        targetSdkVersion 34
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
         buildConfigField "String", "AUTHORIZATION_ENDPOINT", '"https://devconsole-mid.mimik.com"'
-        buildConfigField "String", "CLIENT_ID", '"<YOUR_CLIENT_ID>"'
-        buildConfigField "String", "DEVELOPER_ID_TOKEN", '"<YOUR_DEVELOPER_ID_TOKEN>"'
+        buildConfigField "String", "CLIENT_ID", '"a8f542f9-9cdc-4253-b4a6-6ae242570c94"'
+        buildConfigField "String", "DEVELOPER_ID_TOKEN", '"eyJhbGciOiJSUzI1NiIsInR5cCI6IkpXVCIsImtpZCI6Ik80d0NjU0FFMkxkX1VTR3ZSNjdmU18yQlNuZGhuYjFxb2YyY2trUlAyVE0ifQ.eyJzdWIiOiIyOTU5NTU0MTExNDUzNjYzMjMzIiwiZW1haWwiOiIyOTU5NTU0MTExNDUzNjYzMjMzQGV4YW1wbGUuY29tIiwiYXVkIjoiYThmNTQyZjktOWNkYy00MjUzLWI0YTYtNmFlMjQyNTcwYzk0IiwiZXhwIjoxNzM2MTA2NTUzLCJpYXQiOjE3MzM1MTQ1NTMsImlzcyI6Imh0dHBzOi8vZGV2Y29uc29sZS1taWQubWltaWsuY29tIn0.OfImQEcoFepA6kF-t0KmxRNLE6bmw_MMgZc-STrHwPbTrN-aKu_3Mg5zhYQS3lZ7HOkZSPqusPoavHOY8hsG13EgdtPd3VobeNjXgEBYx5r_8COyGK3chCLeG6MZ-EFJrlXEGkku2YxKL4Ko4a8Eky8ojbWPOvOBkJVi-DqjLfPN47mdFejE7CYpXFs0TVk9KORuJ7XLhiPD1SfmC8aYs6tnMB0gIfB4yjGdiMB1s6Mafx7AZG2HhwomC_Gh7Q3C77Q-CSXJwYDFp8bVIEPDQmkiS7gy9WKhtwtroGYIb3AJ7C3Zv6NAncotvpHXHBPtmavEQPXG42ynZmvJqAzFqA"'
     }
 
     buildTypes {
@@ -36,14 +36,14 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.9.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.appcompat:appcompat:1.7.0'
+    implementation 'com.google.android.material:material:1.12.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.2.0'
 
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    androidTestImplementation 'androidx.test.ext:junit:1.2.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
 
-    implementation 'com.mimik.edgesdk-android-client:edgemobileclient-core-developer:0.3.10.1'
-    implementation "com.squareup.okhttp3:okhttp:4.12.0"
+    implementation 'com.mimik.mim-oe-sdk-android:mim-oe-client-developer:3.13.1'
+    implementation 'com.squareup.okhttp3:okhttp:4.12.0'
 }
