--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,7 @@ android {
         buildConfigField "String", "AUTHORIZATION_ENDPOINT", '"https://devconsole-mid.mimik.com"'
         buildConfigField "String", "CLIENT_ID", '"<YOUR_CLIENT_ID>"'
         buildConfigField "String", "DEVELOPER_ID_TOKEN", '"<YOUR_DEVELOPER_ID_TOKEN>"'
+        buildConfigField "String", "MIM_OE_LICENSE", '"<YOUR_MIM_OE_LICENSE>"'
     }
 
     buildTypes {
